syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.huel.cloudhub.file.rpc.block";
option java_outer_classname = "UploadBlocksProtos";

enum BlockRequestCompressType {
  NONE = 0;
  ZIP = 1;
  TAR = 3;
}

message UploadBlockData {
  bytes data = 1;
}

message UploadBlocksInfo {
  // index of the request
  int32 index = 1;
  repeated UploadBlockData blocks = 3;
}


message UploadBlocksRequest {
  message Host {
    string host = 1;
    int32 port = 2;
  }

  message CheckMessage {
    int32 request_count = 1;
    int64 valid_bytes = 2;
    string check_value = 3;
    int64 file_length = 4;
    repeated Host replicaHosts = 8;
    // FIRST REQUEST. compress type
    BlockRequestCompressType compress_type = 9;
  }

  string identity = 1;
  oneof Upload {
    CheckMessage check_message = 2;
    UploadBlocksInfo upload_blocks = 3;
  }
}

message UploadBlocksResponse {
  oneof block_response {
    int32 block_count = 1;
    bool file_exists = 2;
  }
}

service BlockUploadService {
  rpc uploadBlocks(stream UploadBlocksRequest)
      returns (stream UploadBlocksResponse);
}
